# StackVMCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.asm  fibonacci.asm  helloworld.asm  sinewave.asm
include/: Assembly.hpp  Compiler.hpp  Compiler2.hpp  CompilerTest.hpp  CompilerUtility.hpp  ConversionUtility.hpp  IO.hpp  Instruction.hpp  Lexer.hpp  MathOperation.hpp  Specification.hpp  Stack.hpp  StandardLibrary.hpp  StringUtility.hpp  Tokenizer.hpp  VirtualMachine.hpp
src/: Compiler.cpp  Compiler2.cpp  CompilerTest.cpp  CompilerUtility.cpp  ConversionUtility.cpp  IO.cpp  Lexer.cpp  MathOperation.cpp  StandardLibrary.cpp  StringUtility.cpp  Tokenizer.cpp  VirtualMachine.cpp  main.cpp
